--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-C.V Folder
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>My C.V</title>
+		<link rel="stylesheet" href="Styles/myStyle.css">
+	</head>
+	<body>
+			<h1 id="name" class="title">Jetinder Rathore</h1>
+			<h3 class="title">Jetinder94@hotmail.com </h3>
+			<h3 class="title">Mobile Number: 0871164462</h3>
+			
+
+				
+		<div id="Linkedin">
+			<a class= Link href="https://www.linkedin.com/in/jetinder-rathore-a271a3121/">Linkedin Page</a>
+			<a class= Cover href="Cover Letter/CoverLetter.html">Cover Letter</a>
+		</div>
+
+			<h2 class="title">Education</h2>
+
+			
+
+
+		<div class="list">
+			<ul>
+				<li>L8 Honours Degree: Mechanical and Manufacturing Engineering</li>
+				<li>HND: Mechanical Engineering</li>
+				<li>HNC: Mechanical Engineering</li>
+			</ul>
+		</div>
+			<h2 id="Exp">Experience</h2>
+			<h3>Intel Corportation: 2016 - <span style="text-decoration-line: underline;">Present</span></h3> 
+		
+			<Div class="Skillsdiv">
+			<ul type="square">
+				<li>Use SPC to determine RCA of defects inline and identify possible risk outliers</li>	
+				<li>Create and update documentation to aid RCA of defects </li>
+				<li>Report out in meetings for module WIP bottlenecks</li>
+				<li>Identify excursion level scrap events using SPC and trends analysis</li>
+				<li>Communicate with other modules on plans for tool recovery post tool maintenance</li>
+				<li>Provide disposition data for modules pertaining to tool health </li>
+				<li>Creating and updating SOPs </li>
+				<li>Attend meetings ensuring module is meeting KPI’s</li>
+				<li>Drive standardisation within the area</li>
+				<li>Create and implement cost saving projects within the area</li>
+			</ul>
+		</Div>
+
+		<h3>Waters Corporation: 2014 - 2016</h3>
+
+		<div class="WatersSkills">
+				<ul type="square">
+					<li>Fixture/jig design using Solidworks </li>
+					<li>Develop and implement use of SPC to control deviation </li>
+					<li>Meeting quality practices of ISO9001 & AS9100C</li>
+					<li>FMEA investigations</li>
+					<li>Completing Visual F.A.I.R/L.A.I.R documents </li>
+					<li>Creating NCR to suppliers and internally </li>
+					<li>Read and assess complex engineering drawings</li>
+				</ul>
+		</div>
+
+			<h2>Skills</h2>
+
+				<div class="container">
+					<p class="Waters2">Quality Engineering</p>
+					<p class="Waters2">ISO9001</p>
+					<p class="Waters2">AS9100C</p>
+					<p class="Waters2">CMM Programming</p>
+					<p class="Waters2">Six Sigma</p>
+				</div>
+
+		
+			<div class="Additional">
+				<h2>Additional Education</h2>
+			</div>
+			<div class="container1">
+
+			<div class="Mechanical">
+				<h3>Institute of Mechanical Engineers</h3>
+				<p> Currently at EngTech status, working toward incorporated Engineer</p>
+			</div>
+			<div class="Sigma">
+				<h3>Six Sigma Green Belt</h3>
+				<p>Project Management Institiute</p>
+			</div>
+			<div class="Super">
+				<h3>Q-DAS Superuser (O-QIS), Procella, QS-Stat</h3>
+				<p>Hexagon Metrology Q-Das</p>
+			</div>
+
+		</div>
+
+
+		<br>
+<a href="#name">Return to top of document</a>
+	</body>	
+
+</html>
